[package]
name = "mpl-bubblegum"
version = "0.8.0"
description = "NFT Compression"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
bytemuck = "1.13.0"
mpl-token-metadata = { path = "../../token-metadata/program", features = ["no-entrypoint"] }
solana-program = "1.16"
spl-account-compression = { git = "https://github.com/ChewingGlass/solana-program-library.git", features = ["cpi"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5", features = ["no-entrypoint"] }
borsh = "0.10"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-concurrent-merkle-tree = "0.1.2"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
mpl-token-auth-rules = { git = "https://github.com/ChewingGlass/mpl-token-auth-rules.git", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
