[package]
name = "mpl-token-metadata"
version = "1.13.0"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.16"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = { features = ["no-entrypoint"], git = "https://github.com/ChewingGlass/mpl-token-auth-rules.git" }
thiserror = "1.0"
borsh = "0.10"
shank = { version = "0.0.11" }
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
mpl-utils = { version = "0.2.0", path="../../core/rust/utils" }
mpl-token-metadata-context-derive = { version = "0.2.1", path = "../macro" }

[dev-dependencies]
rmp-serde = "1.1.1"
rooster = { git = "https://github.com/metaplex-foundation/rooster" }
solana-sdk = "1.16"
solana-program-test = "1.16"
serde = { version = "1.0.147", features = ["derive"]}
async-trait = "0.1.64"
old-token-metadata = { package = "mpl-token-metadata", version = "=1.10.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
